--- a/14-example-graphql-simple/my-graphql-fun/package.json
+++ b/14-example-graphql-simple/my-graphql-fun/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@azure/cosmos": "^3.16.4",
     "apollo-server-azure-functions": "^3.10.0",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@azure/functions": "^3.0.0",
